Addded skeleton files for Part 1

--- a/mylab4/p1/Makefile
+++ b/mylab4/p1/Makefile
@@ -3,7 +3,7 @@ DEBUG		=-U Debug
 FLAGS		=-g -Wall -std=c99 $(DEBUG)
 EXECUTABLE	=fsserver
 SOURCES		=$(EXECUTABLE).c
-HEADERS		=fsserver.h
+HEADERS		=fs.h
 OBJECTS		=$(SOURCES:.c=.o)
 RM		=rm -rf
 
