--- a/mylab4/p2/Makefile
+++ b/mylab4/p2/Makefile
@@ -2,8 +2,8 @@ CC		=gcc
 DEBUG		=-U Debug
 FLAGS		=-g -Wall $(DEBUG) $(EXEC) $(TEST)
 EXECUTABLE	=mytalk
-SOURCES		=$(EXECUTABLE).c printUsage.c parseAndCheckPort.c mallocAndCheck.c bindUDPSocket.c setChildHandler.c handleChild.c numberFromString.c
-HEADERS		=fs.h
+SOURCES		=$(EXECUTABLE).c printUsage.c parseAndCheckPort.c mallocAndCheck.c bindUDPSocket.c setChildHandler.c handleChild.c numberFromString.c setPacketHandler.c handlePacket.c noResponse.c setAlarm.c setAlarmHandler.c
+HEADERS		=mytalk.h
 OBJECTS		=$(SOURCES:.c=.o)
 RM		=rm -rf
 
